--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,8 @@ section {
 .page {
   background: url("../images/bg-mob.webp") no-repeat center/cover;
   font-family: "Play", "Arial", "Helvetica", sans-serif;
+  max-width: 360px;
+  margin: 0 auto;
 }
 
 .pagecrm {
