--- a/sass/style.sass
+++ b/sass/style.sass
@@ -147,6 +147,8 @@ section
 .page
     background: url("../images/bg-mob.webp") no-repeat center/cover
     font-family: "Play", "Arial", "Helvetica", sans-serif
+    max-width: 360px
+    margin: 0 auto
 
 .pagecrm
     margin-top: 0
